# fastapi-fleamarket

./: .gitignore  README.md  alembic.ini  config.py  database.py  main.py  models.py  pyproject.toml  schemas.py
cruds/: auth.py  item.py
migrations/versions/: 3d98c584c5f3_create_items_table.py  40a49501fbe4_add_salt_column.py  a9d54954c530_create_users_table.py  b79e3ef51de6_add_foreign_key.py
routers/: auth.py  item.py
tests/: conftest.py  test_item.py
