[tool.poetry]
name = "fastapi-fleamarket"
version = "0.1.0"
description = ""
authors = ["RADISH-miyazaki <y.hidaka.kobe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
