[tool.poetry]
name = "fastapi-fleamarket"
version = "0.1.0"
description = ""
authors = ["RADISH-miyazaki <y.hidaka.kobe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pytest = "^7.4.4"
httpx = "^0.26.0"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
